Preparando o espaço para imagens

--- a/index.html
+++ b/index.html
@@ -44,5 +44,33 @@
             </h4>
         </div>
     </section>
+    <section id="touristic-points">
+        <div class="touristic-points-content">
+            <div class="title">
+                <h3>PRINCIPAIS PONTOS TURÍSTICOS <br>DE <b>MANAUS</b></h3>
+            </div>
+            <div class="pictures">
+                <div class="line-one">
+                    <div id="two-images-column">
+                        <img src="src/images/background-filtro-2.png" alt="" id="image-one">
+                        <img src="src/images/background-filtro-3.png" alt="" id="image-two">
+                    </div>
+                    <div id="main-image-line-one">
+                        <img src="src/images/background-filtro-4.png" alt="" id="image-three">
+                    </div>
+                    <div id="side-image-line-one">
+                        <img src="src/images/background-filtro-5.png" alt="" id="image-four">
+                    </div>
+                </div>
+                <div id="lead-section">
+                    <img src="src/images/background-filtro-4.png" alt="" id="lead-section-image">
+                </div>
+                <div id="line-two">
+                    <img src="src/images/background-filtro-6.png" alt="" id="image-five">
+                    <img src="src/images/background-filtro-6.png" alt="" id="image-six">
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
