--- a/index.html
+++ b/index.html
@@ -52,23 +52,58 @@
             <div class="pictures">
                 <div class="line-one">
                     <div id="two-images-column">
-                        <img src="src/images/background-filtro-2.png" alt="" id="image-one">
-                        <img src="src/images/background-filtro-3.png" alt="" id="image-two">
+                        <div class="picture" id="ponta-negra">
+                            <div class="picture-content"></div>
+                        </div>
+                        <div class="picture" id="musa">
+                            <div class="picture-content"></div>
+                        </div>
                     </div>
                     <div id="main-image-line-one">
-                        <img src="src/images/background-filtro-4.png" alt="" id="image-three">
+                        <div class="picture" id="encontro-aguas">
+                            <div class="picture-content"></div>
+                        </div>
                     </div>
                     <div id="side-image-line-one">
-                        <img src="src/images/background-filtro-5.png" alt="" id="image-four">
+                        <div class="picture" id="ponte-rio-negro">
+                            <div class="picture-content"></div>
+                        </div>
                     </div>
                 </div>
                 <div id="lead-section">
-                    <img src="src/images/background-filtro-4.png" alt="" id="lead-section-image">
+                    <div class="picture" id="lead-section-image">
+                        <div class="picture-content">
+                            <div class="lead-container">
+                                <div class="lead-content">
+                                    <div id="lead-title">
+                                        <h4>Confira nossos passeios<br> e <b>reserve pelo whatsapp.</b></h4>
+                                    </div>
+                                    <div id="lead-forms">
+                                        <input type="text" name="Nome" id="Nome" placeholder="Nome">
+                                        <input type="text" name="Email" id="Email" placeholder="Email">
+                                    </div>
+                                    <button class="lead-button">
+                                        FALE COM UM ESPECIALISTA
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div id="line-two">
-                    <img src="src/images/background-filtro-6.png" alt="" id="image-five">
-                    <img src="src/images/background-filtro-6.png" alt="" id="image-six">
+                    <div class="picture" id="praia-lua">
+                        <div class="picture-content"></div>
+                    </div>
+                    <div class="picture" id="inpa">
+                        <div class="picture-content"></div>
+                    </div>
                 </div>
+            </div>
+            <div class="picture-text">
+                <h4>
+                    E não é só de natureza que vive a cidade não, meu amigo. Manaus é o coração pulsante da região Norte, sabia? É aqui que o 
+                    comércio ferve, a indústria movimenta, a tecnologia avança e a educação se expande.
+                </h4>
             </div>
         </div>
     </section>
