--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Turismo Manaus</title>
+    <link rel="icon" href="src/images/arvore.png">
     <link rel="stylesheet" href="src/styles/vars.css">
     <link rel="stylesheet" href="src/styles/styles.css">
     <link rel="stylesheet" href="src/styles/media-queries.css">
@@ -53,20 +54,28 @@
                 <div class="line-one">
                     <div id="two-images-column">
                         <div class="picture" id="ponta-negra">
-                            <div class="picture-content"></div>
+                            <div class="picture-content">
+                                <h4>Ponta Negra</h4>
+                            </div>
                         </div>
                         <div class="picture" id="musa">
-                            <div class="picture-content"></div>
+                            <div class="picture-content">
+                                <h4>Musa</h4>
+                            </div>
                         </div>
                     </div>
                     <div id="main-image-line-one">
                         <div class="picture" id="encontro-aguas">
-                            <div class="picture-content"></div>
+                            <div class="picture-content">
+                                <h4>Encontro das Águas</h4>
+                            </div>
                         </div>
                     </div>
                     <div id="side-image-line-one">
                         <div class="picture" id="ponte-rio-negro">
-                            <div class="picture-content"></div>
+                            <div class="picture-content">
+                                <h4>Ponte Rio Negro</h4>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -92,10 +101,14 @@
                 </div>
                 <div id="line-two">
                     <div class="picture" id="praia-lua">
-                        <div class="picture-content"></div>
+                        <div class="picture-content">
+                            <h4>Praia da Lua</h4>
+                        </div>
                     </div>
                     <div class="picture" id="inpa">
-                        <div class="picture-content"></div>
+                        <div class="picture-content">
+                            <h4>Instituto Nacional <br>de Pesquisas da Amazônia</h4>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -104,6 +117,93 @@
                     E não é só de natureza que vive a cidade não, meu amigo. Manaus é o coração pulsante da região Norte, sabia? É aqui que o 
                     comércio ferve, a indústria movimenta, a tecnologia avança e a educação se expande.
                 </h4>
+            </div>
+        </div>
+    </section>
+    <section id="time-line">
+        <div class="time-line-content">
+            <div class="main-icon">
+                <div class="main-ellipse-one">
+                    <div class="main-ellipse-two">
+                        <p>MANAUS</p>
+                    </div>
+                </div>
+            </div>
+            <div class="line">
+                <div class="line-content" id="left-column">
+                    <div class="column-content">
+                        <div class="side-column-content" id="left-column-content">
+                            <div class="text-box">
+                                <h4>Ponta Negra</h4>
+                                <h5>Localizada às margens do majestoso Rio Negro,
+                                    a Ponta Negra é um dos pontos turísticos mais
+                                    cativantes e emblemáticos de Manaus, a capital do
+                                    estado do Amazonas, no coração da Amazônia
+                                    brasileira. Com suas areias douradas, águas escuras
+                                    e uma vista espetacular do rio, este local encanta 
+                                    tanto os moradores locais quanto os visitantes de 
+                                    todo o mundo. Vamos explorar o que torna a 
+                                    Ponta Negra um destino imperdível em Manaus.</h5>
+                            </div>
+                            <div class="text-box">
+                                <h4>Praia da Lua</h4>
+                                <h5>Aninhada às margens serenas e imponentes do 
+                                    Rio Negro, encontra-se a Praia da Lua, um verdadeiro
+                                    refúgio paradisíaco situado nos arredores de Manaus.
+                                    Esta praia encantadora, conhecida por sua beleza natural 
+                                    intocada e atmosfera serena, oferece uma fuga tranquila 
+                                    para aqueles que buscam escapar do ritmo agitado da
+                                    cidade e mergulhar na exuberância da natureza 
+                                    amazônica.</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="line-content" id="main-line">
+                    <div class="main-line-content">
+                        <div class="line-ellipse">
+                            <div class="selected"></div>
+                        </div>
+                        <div class="line-ellipse">
+                            <div class="selected"></div>
+                        </div>
+                        <div class="line-ellipse">
+                            <div class="selected"></div>
+                        </div>
+                        <div class="line-ellipse">
+                            <div class="selected"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="line-content" id="right-column">
+                    <div class="column-content">
+                        <div class="side-column-content" id="right-column-content">
+                            <div class="text-box">
+                                <h4>INPA</h4>
+                                <h5>O Instituto Nacional de Pesquisas da Amazônia (INPA) 
+                                    é uma instituição renomada que desempenha um 
+                                    papel fundamental na pesquisa, preservação e 
+                                    compreensão da maior floresta tropical do mundo. 
+                                    Fundado em 1952, o INPA tornou-se um centro de 
+                                    excelência científica, atraindo pesquisadores 
+                                    nacionais e internacionais interessados em 
+                                    desvendar os mistérios da biodiversidade amazônica.</h5>
+                            </div>
+                            <div class="text-box">
+                                <h4>Teatro Amazonas</h4>
+                                <h5>o Teatro Amazonas é um testemunho vivo da riqueza histórica e da sofisticação cultural que caracterizam a 
+                                    região amazônica. Desde sua inauguração em 1896, este icônico teatro tem sido palco de inúmeras produções 
+                                    artísticas, performances musicais  e eventos culturais, atraindo visitantes de todo o mundo para 
+                                    testemunhar sua beleza deslumbrante e mergulhar na rica herança cultural da Amazônia.</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="line-button">
+                <button class="lead-button">
+                    FALE COM UM ESPECIALISTA
+                </button>
             </div>
         </div>
     </section>
