--- a/index.html
+++ b/index.html
@@ -207,5 +207,52 @@
             </div>
         </div>
     </section>
+    <section id="comments">
+        <div class="comments-content">
+            <div class="title">
+                <h3>VEJA O QUE A GALERA ESTÁ COMENTANDO...</h3>
+                <p>Confira o que a galera que fez os passeios estão falando pro ai. Não perca tempo e seja o próximo a ter esta 
+                    íncrivel experiência</p>
+            </div>
+            <div class="cards">
+                <div class="card">
+                    <div class="card-content">
+                        <h4>João da Silva</h4>
+                        <h5>Fui ao passeio da Praia da Lua e adorei, atendimento de qualidade...</h5>
+                    </div>
+                    <div class="card-image">
+                        <img src="src/images/user-perfil.png" alt="user-perfil.png">
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-content">
+                        <h4>João da Silva</h4>
+                        <h5>Fui ao passeio da Praia da Lua e adorei, atendimento de qualidade...</h5>
+                    </div>
+                    <div class="card-image">
+                        <img src="src/images/user-perfil.png" alt="user-perfil.png">
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-content">
+                        <h4>João da Silva</h4>
+                        <h5>Fui ao passeio da Praia da Lua e adorei, atendimento de qualidade...</h5>
+                    </div>
+                    <div class="card-image">
+                        <img src="src/images/user-perfil.png" alt="user-perfil.png">
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-content">
+                        <h4>João da Silva</h4>
+                        <h5>Fui ao passeio da Praia da Lua e adorei, atendimento de qualidade...</h5>
+                    </div>
+                    <div class="card-image">
+                        <img src="src/images/user-perfil.png" alt="user-perfil.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
