--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="src/styles/vars.css">
     <link rel="stylesheet" href="src/styles/styles.css">
     <link rel="stylesheet" href="src/styles/media-queries.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 </head>
 <body class="guide">
     <main>
@@ -250,6 +251,46 @@
                     <div class="card-image">
                         <img src="src/images/user-perfil.png" alt="user-perfil.png">
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="final-questions">
+        <div class="final-question-content">
+            <div class="final-cards">
+                <div class="final-card-message">
+                    <h4>Manaus é segura?</h4>
+                    <i class="fa-solid fa-angle-down"></i>
+                </div>
+            </div>
+            <div class="final-cards">
+                <div class="final-card-message">
+                    <h4>Manaus é segura?</h4>
+                    <i class="fa-solid fa-angle-down"></i>
+                </div>
+            </div>
+            <div class="final-cards">
+                <div class="final-card-message">
+                    <h4>Manaus é segura?</h4>
+                    <i class="fa-solid fa-angle-down"></i>
+                </div>
+            </div>
+            <div class="final-cards">
+                <div class="final-card-message">
+                    <h4>Manaus é segura?</h4>
+                    <i class="fa-solid fa-angle-down"></i>
+                </div>
+            </div>
+            <div class="final-cards">
+                <div class="final-card-message">
+                    <h4>Manaus é segura?</h4>
+                    <i class="fa-solid fa-angle-down"></i>
+                </div>
+            </div>
+            <div class="final-cards">
+                <div class="final-card-message">
+                    <h4>Manaus é segura?</h4>
+                    <i class="fa-solid fa-angle-down"></i>
                 </div>
             </div>
         </div>
