--- a/index.html
+++ b/index.html
@@ -257,43 +257,95 @@
     </section>
     <section id="final-questions">
         <div class="final-question-content">
-            <div class="final-cards">
-                <div class="final-card-message">
-                    <h4>Manaus é segura?</h4>
-                    <i class="fa-solid fa-angle-down"></i>
-                </div>
+            <div class="final-questions-title">
+                <h3>PERGUNTAS FREQUENTES</h3>
             </div>
             <div class="final-cards">
                 <div class="final-card-message">
                     <h4>Manaus é segura?</h4>
                     <i class="fa-solid fa-angle-down"></i>
                 </div>
+                <span>
+                    <h5>Nos últimos anos, 
+                        tem crescido a pratica da “pirangagem”, expressão utilizada localmente para pessoas que trabalham sem 
+                        autorização ou legalização e se passam por agências de turismo. Os mesmos prometem os mesmos passeios 
+                        de qualidade com valores inferiores, após “contratar” com uma destas pseudo agências muitas das vezes o 
+                        turista é abandonado na selva pelo pirangueiro ou não tem o serviço entregue como prometido. Por isso, dar uma
+                        boa pesquisada em fontes confiáveis antes de viajar é muito recomendado.</h5>
+                </span>
             </div>
             <div class="final-cards">
                 <div class="final-card-message">
                     <h4>Manaus é segura?</h4>
                     <i class="fa-solid fa-angle-down"></i>
                 </div>
+                                <span>
+                    <h5>Nos últimos anos, 
+                        tem crescido a pratica da “pirangagem”, expressão utilizada localmente para pessoas que trabalham sem 
+                        autorização ou legalização e se passam por agências de turismo. Os mesmos prometem os mesmos passeios 
+                        de qualidade com valores inferiores, após “contratar” com uma destas pseudo agências muitas das vezes o 
+                        turista é abandonado na selva pelo pirangueiro ou não tem o serviço entregue como prometido. Por isso, dar uma
+                        boa pesquisada em fontes confiáveis antes de viajar é muito recomendado.</h5>
+                </span>
             </div>
             <div class="final-cards">
                 <div class="final-card-message">
                     <h4>Manaus é segura?</h4>
                     <i class="fa-solid fa-angle-down"></i>
                 </div>
+                                <span>
+                    <h5>Nos últimos anos, 
+                        tem crescido a pratica da “pirangagem”, expressão utilizada localmente para pessoas que trabalham sem 
+                        autorização ou legalização e se passam por agências de turismo. Os mesmos prometem os mesmos passeios 
+                        de qualidade com valores inferiores, após “contratar” com uma destas pseudo agências muitas das vezes o 
+                        turista é abandonado na selva pelo pirangueiro ou não tem o serviço entregue como prometido. Por isso, dar uma
+                        boa pesquisada em fontes confiáveis antes de viajar é muito recomendado.</h5>
+                </span>
             </div>
             <div class="final-cards">
                 <div class="final-card-message">
                     <h4>Manaus é segura?</h4>
                     <i class="fa-solid fa-angle-down"></i>
                 </div>
+                                <span>
+                    <h5>Nos últimos anos, 
+                        tem crescido a pratica da “pirangagem”, expressão utilizada localmente para pessoas que trabalham sem 
+                        autorização ou legalização e se passam por agências de turismo. Os mesmos prometem os mesmos passeios 
+                        de qualidade com valores inferiores, após “contratar” com uma destas pseudo agências muitas das vezes o 
+                        turista é abandonado na selva pelo pirangueiro ou não tem o serviço entregue como prometido. Por isso, dar uma
+                        boa pesquisada em fontes confiáveis antes de viajar é muito recomendado.</h5>
+                </span>
             </div>
             <div class="final-cards">
                 <div class="final-card-message">
                     <h4>Manaus é segura?</h4>
                     <i class="fa-solid fa-angle-down"></i>
                 </div>
+                                <span>
+                    <h5>Nos últimos anos, 
+                        tem crescido a pratica da “pirangagem”, expressão utilizada localmente para pessoas que trabalham sem 
+                        autorização ou legalização e se passam por agências de turismo. Os mesmos prometem os mesmos passeios 
+                        de qualidade com valores inferiores, após “contratar” com uma destas pseudo agências muitas das vezes o 
+                        turista é abandonado na selva pelo pirangueiro ou não tem o serviço entregue como prometido. Por isso, dar uma
+                        boa pesquisada em fontes confiáveis antes de viajar é muito recomendado.</h5>
+                </span>
+            </div>
+            <div class="final-cards">
+                <div class="final-card-message">
+                    <h4>Manaus é segura?</h4>
+                    <i class="fa-solid fa-angle-down"></i>
+                </div>
+                                <span>
+                    <h5>Nos últimos anos, 
+                        tem crescido a pratica da “pirangagem”, expressão utilizada localmente para pessoas que trabalham sem 
+                        autorização ou legalização e se passam por agências de turismo. Os mesmos prometem os mesmos passeios 
+                        de qualidade com valores inferiores, após “contratar” com uma destas pseudo agências muitas das vezes o 
+                        turista é abandonado na selva pelo pirangueiro ou não tem o serviço entregue como prometido. Por isso, dar uma
+                        boa pesquisada em fontes confiáveis antes de viajar é muito recomendado.</h5>
+                </span>
             </div>
         </div>
     </section>
+    <script src="src/javascript/script.js"></script>
 </body>
 </html>
